# pse

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenCVConfig.cmake  OpenCVModules.cmake  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cvconfig.h  pse.sln  pse.vcxproj  pse.vcxproj.filters
clipper/: ALL_BUILD.vcxproj  INSTALL.vcxproj  cmake_install.cmake  polyclipping.pc  polyclipping.sln  polyclipping.vcxproj  polyclipping.vcxproj.filters
clipper.old/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  polyclipping.sln  polyclipping.vcxproj
pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pybind11.sln
src/: adaptor.cpp  main.cpp
unix-install/: opencv.pc
win-install/: OpenCVConfig.cmake
